# infinite-training

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: python-publish.yml
infinite_training/: __init__.py
tests/: test_infinite_training.py
